# rust-game-book

./: Cargo.toml
assets/: battle_scenes.json
client/: Cargo.toml
client/src/: main.rs  utils.rs
server/: Cargo.toml
server/src/: enemies.rs  main.rs  scenes.rs  utils.rs
src/: main.rs  scenes.rs  standard_scenes.json  utils.rs
