[package]
name = "client"
version = "0.1.0"
authors = ["Tom치코 Vojt치코ek <vojtasek.tomas@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.3"